[package]
name = "kdbx-forum"
version = "0.1.0"
edition = "2024"

[dependencies]
keepass = { version = "0.7", features = ["save_kdbx4"] }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
